--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ html {
 }
 
 .treatment-intro {
-    margin: 40px 100px 0;
+    margin: 40px 0px 0;
 }
 /* HEADER */
 .header {
@@ -428,6 +428,62 @@ html {
   transform: translateY(-3px);
 }
 
+.localizacao {
+  padding: 80px 0;
+  background: #f9f9f9;
+}
+
+.localizacao-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  align-items: center;
+}
+
+.localizacao-texto {
+    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.localizacao-texto h2 {
+  font-size: 2rem;
+  color: #c62828;
+  margin-bottom: 20px;
+ 
+}
+.texto-localizacao {
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+.mapa {
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.btn-mapa {
+  background: #c62828;
+  color: #fff;
+  border: none;
+  padding: 14px 28px;
+  font-size: 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.btn-mapa:hover {
+    background: var(--light);
+    color: #000;
+    transition: 0.5s ease-in-out;
+}
+.mapa iframe {
+  width: 100%;
+  height: 450px;
+  border: 0;
+}
+
 /* RESPONSIVO */
 @media (max-width: 768px) {
     .service-highlight {
@@ -462,4 +518,7 @@ html {
   .treatment-intro {
     margin: 20px 20px 0;
   }
+  .localizacao-grid {
+    grid-template-columns: 1fr;
+  } 
 }
